@@ -24,6 +24,7 @@ Minor changes
  * Also ignore non-finite values when fitting with minuit
  * Avoid syntax error with invalid colormap
  * Updates to setup.py and desktop files
+ * Recreate dataset now works if dialog hasn't been opened already
 
 Changes in 1.22:
  * Add option to ignore white space following delimiters when importing CSVs
